--- a/main.html
+++ b/main.html
@@ -8,6 +8,42 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form method="POST">
+		<label for="name">Name</label>
+		<input id="name" placeholder="Name" type="text" required > <br>
+		
+		<label for="email">Email</label>
+		<input id="email" placeholder="Email" type="email" required> <br>
+		
+		<label for="">Gender</label>
+		<input id="gender_m"  type="radio" name="gender" required>
+		<input id="gender_f"  type="radio" name="gender" required> <br>
+		
+		<label for="cars">Cars Brands</label>
+        <select required id="cars" placeholder="--Please choose an option--">
+			<option>Volvo</option>
+			<option>BMW</option>
+			<option>Audi</option>
+		</select> <br>
+		
+		<label for="age">Age</label>
+		<input id="age" placeholder="Age" type="number" required> <br>
+		
+		<label for="dob">DOB</label>
+		<input id="dob" type="date" required> <br>
+		
+		<label for="tel">Phone Number</label>
+		<input id="tel" placeholder="xxx-xxx-xxxx" type="tel">
+		
+		<label for="password">Password</label>
+		<input id="password" placeholder="Password" type="password" required>
+		
+		<label for="tos">I agree to the TOS</label>
+		<input id="tos" type="checkbox" required> <br>
+
+		<button type="submit">submit</button>
+		
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
